[package]
name = "fishpi-undercover"
authors = ["只有午安"]
version = "0.1.0"
edition = "2024"

# 添加静态链接配置
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "fishpi-undercover"
path = "src/main.rs"

[[bin]]
name = "word-manager"
path = "src/bin/word_manager.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
rand = "0.9.1"
dashmap = "6.1.0"
sha2 = "0.10"
hex = "0.4"
config = "0.13"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.4"
clap = { version = "3.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2.1"